--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
     "@sendgrid/mail": "^8.1.5",
+    "@types/jspdf": "^1.3.3",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "form-data": "^4.0.2",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "mailgun-js": "^0.22.0",
     "mailgun.js": "^12.0.1",
     "mongoose": "^8.14.0",
@@ -47,6 +50,5 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "typescript": "~5.4.2"
   },
-    "type": "module"
-
+  "type": "module"
 }
